--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -43,7 +43,7 @@
                 <div class="header3-wrap">
                     <div class="header__logo">
                         <a href="#">
-                            <img src="/static/images/icon/logo-white.png" alt="CoolAdmin" />
+                            <img src="/static/images/icon/logo1.png" alt="CoolAdmin" />
                         </a>
                     </div>
                     <div class="header__navbar">
@@ -87,7 +87,7 @@
                 <div class="container-fluid">
                     <div class="header-mobile-inner">
                         <a class="logo" href="index.html">
-                            <img src="images/icon/logo-white.png" alt="CoolAdmin" />
+                            <img src="images/icon/logo1.png" alt="CoolAdmin" />
                         </a>
                         <button class="hamburger hamburger--slider" type="button">
                             <span class="hamburger-box">
